add shaka buttons for post

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "gatsby-source-filesystem": "^2.1.33",
     "gatsby-transformer-remark": "^2.6.30",
     "gatsby-transformer-sharp": "^2.2.23",
+    "polished": "^3.4.1",
     "prism-theme-night-owl": "^1.2.0",
     "prismjs": "^1.17.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
+    "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "shuffle-array": "^1.0.1",
     "styled-components": "^4.4.0",
