--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,20 +20,21 @@
   ],
   "rules": {
     "indent": [
-      "error",
+      "warn",
       2
     ],
     "linebreak-style": [
-      "error",
+      "warn",
       "windows"
     ],
     "quotes": [
-      "error",
+      "warn",
       "double"
     ],
     "semi": [
-      "error",
+      "warn",
       "never"
-    ]
+    ],
+    "no-console": [false]
   }
 }
