--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/AustinBrunkhorst/austinbrunkhorst.com/issues"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.16.1",
     "gatsby-image": "^2.2.29",
