--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sharp": "^2.2.31",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-plugin-typography": "^2.3.14",
+    "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-copy-linked-files": "^2.1.28",
     "gatsby-remark-images": "^3.1.28",
     "gatsby-remark-prismjs": "^3.3.20",
@@ -32,19 +33,19 @@
     "prism-theme-night-owl": "^1.2.0",
     "prismjs": "^1.17.1",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1",
+    "react-dom": "npm:@hot-loader/react-dom",
+    "react-helmet": "^6.1.0",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "shuffle-array": "^1.0.1",
-    "styled-components": "^4.4.0",
+    "styled-components": "^5.1.1",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^2.0.5"
   },
   "homepage": "https://austinbrunkhorst.com",
   "keywords": [
